Kaggle Notebook | phase-1.ipynb | Version 4

--- a/phase-1-ipynb.ipynb
+++ b/phase-1-ipynb.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d971cd33",
+   "id": "57019861",
    "metadata": {
     "papermill": {
-     "duration": 0.003613,
-     "end_time": "2025-06-12T10:40:45.663536",
+     "duration": 0.004156,
+     "end_time": "2025-06-12T10:56:10.513160",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.659923",
+     "start_time": "2025-06-12T10:56:10.509004",
      "status": "completed"
     },
     "tags": []
@@ -21,19 +21,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "033070e4",
+   "id": "f7aad877",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.670794Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.670503Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.677662Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.676874Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.521370Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.521050Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.528517Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.527703Z"
     },
     "papermill": {
-     "duration": 0.012245,
-     "end_time": "2025-06-12T10:40:45.679004",
+     "duration": 0.013412,
+     "end_time": "2025-06-12T10:56:10.530064",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.666759",
+     "start_time": "2025-06-12T10:56:10.516652",
      "status": "completed"
     },
     "tags": []
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f29dbf8",
+   "id": "8c52d08b",
    "metadata": {
     "papermill": {
-     "duration": 0.00259,
-     "end_time": "2025-06-12T10:40:45.684695",
+     "duration": 0.003053,
+     "end_time": "2025-06-12T10:56:10.536653",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.682105",
+     "start_time": "2025-06-12T10:56:10.533600",
      "status": "completed"
     },
     "tags": []
@@ -63,19 +63,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82345256",
+   "id": "cb6e4fcf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.691538Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.691179Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.697972Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.696979Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.544571Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.544232Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.551624Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.550608Z"
     },
     "papermill": {
-     "duration": 0.011837,
-     "end_time": "2025-06-12T10:40:45.699384",
+     "duration": 0.013134,
+     "end_time": "2025-06-12T10:56:10.553106",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.687547",
+     "start_time": "2025-06-12T10:56:10.539972",
      "status": "completed"
     },
     "tags": []
@@ -97,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22914c5b",
+   "id": "256f2144",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.707104Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.706303Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.711772Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.710843Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.561291Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.560988Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.566427Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.565451Z"
     },
     "papermill": {
-     "duration": 0.010668,
-     "end_time": "2025-06-12T10:40:45.713216",
+     "duration": 0.011249,
+     "end_time": "2025-06-12T10:56:10.567936",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.702548",
+     "start_time": "2025-06-12T10:56:10.556687",
      "status": "completed"
     },
     "tags": []
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c070d6",
+   "id": "13f1b323",
    "metadata": {
     "papermill": {
-     "duration": 0.002836,
-     "end_time": "2025-06-12T10:40:45.719231",
+     "duration": 0.003377,
+     "end_time": "2025-06-12T10:56:10.574821",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.716395",
+     "start_time": "2025-06-12T10:56:10.571444",
      "status": "completed"
     },
     "tags": []
@@ -148,13 +148,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d9ae665",
+   "id": "44d6b56a",
    "metadata": {
     "papermill": {
-     "duration": 0.002736,
-     "end_time": "2025-06-12T10:40:45.724926",
+     "duration": 0.003017,
+     "end_time": "2025-06-12T10:56:10.581280",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.722190",
+     "start_time": "2025-06-12T10:56:10.578263",
      "status": "completed"
     },
     "tags": []
@@ -166,19 +166,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "74a58cd6",
+   "id": "ba5cc4d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.732146Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.731835Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.736591Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.735623Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.589701Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.588751Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.593844Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.593016Z"
     },
     "papermill": {
-     "duration": 0.010044,
-     "end_time": "2025-06-12T10:40:45.737898",
+     "duration": 0.010632,
+     "end_time": "2025-06-12T10:56:10.595141",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.727854",
+     "start_time": "2025-06-12T10:56:10.584509",
      "status": "completed"
     },
     "tags": []
@@ -200,19 +200,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "651743e1",
+   "id": "a4317433",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.745165Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.744872Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.751440Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.750559Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.603148Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.602832Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.609835Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.608720Z"
     },
     "papermill": {
-     "duration": 0.011658,
-     "end_time": "2025-06-12T10:40:45.752701",
+     "duration": 0.012861,
+     "end_time": "2025-06-12T10:56:10.611538",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.741043",
+     "start_time": "2025-06-12T10:56:10.598677",
      "status": "completed"
     },
     "tags": []
@@ -234,19 +234,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ca4f9e7e",
+   "id": "11ba010b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.760121Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.759846Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.851263Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.850181Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.619990Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.619674Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.710422Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.709566Z"
     },
     "papermill": {
-     "duration": 0.096688,
-     "end_time": "2025-06-12T10:40:45.852695",
+     "duration": 0.096706,
+     "end_time": "2025-06-12T10:56:10.711857",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.756007",
+     "start_time": "2025-06-12T10:56:10.615151",
      "status": "completed"
     },
     "tags": []
@@ -259,9 +259,9 @@
       "Python list Multiplication [1, 2, 3, 1, 2, 3]\n",
       "Pyhton Array Multiplication [2 4 6]\n",
       "\n",
-      " List operation time: 0.07666897773742676\n",
+      " List operation time: 0.07642960548400879\n",
       "\n",
-      " Numpy operation time: 0.008646011352539062\n"
+      " Numpy operation time: 0.007967472076416016\n"
      ]
     }
    ],
@@ -287,13 +287,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5edff614",
+   "id": "c515c1a1",
    "metadata": {
     "papermill": {
-     "duration": 0.002983,
-     "end_time": "2025-06-12T10:40:45.859056",
+     "duration": 0.003256,
+     "end_time": "2025-06-12T10:56:10.718775",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.856073",
+     "start_time": "2025-06-12T10:56:10.715519",
      "status": "completed"
     },
     "tags": []
@@ -305,19 +305,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8308f522",
+   "id": "5ac699ab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.866981Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.866362Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.872995Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.872025Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.727110Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.726433Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.732711Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.731866Z"
     },
     "papermill": {
-     "duration": 0.012102,
-     "end_time": "2025-06-12T10:40:45.874478",
+     "duration": 0.011955,
+     "end_time": "2025-06-12T10:56:10.734148",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.862376",
+     "start_time": "2025-06-12T10:56:10.722193",
      "status": "completed"
     },
     "tags": []
@@ -338,8 +338,8 @@
       " [[7 7]\n",
       " [7 7]]\n",
       "random array: \n",
-      " [[0.36120347 0.780813   0.72946272]\n",
-      " [0.23640043 0.9900794  0.04226   ]]\n"
+      " [[0.43110738 0.52969858 0.62831691]\n",
+      " [0.33705201 0.84481843 0.47741996]]\n"
      ]
     }
    ],
@@ -360,19 +360,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "306bb05d",
+   "id": "f89e9340",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.882318Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.881991Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.887213Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.886575Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.742573Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.742257Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.747184Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.746313Z"
     },
     "papermill": {
-     "duration": 0.010567,
-     "end_time": "2025-06-12T10:40:45.888524",
+     "duration": 0.010634,
+     "end_time": "2025-06-12T10:56:10.748524",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.877957",
+     "start_time": "2025-06-12T10:56:10.737890",
      "status": "completed"
     },
     "tags": []
@@ -394,13 +394,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24c720b",
+   "id": "d9ce47e5",
    "metadata": {
     "papermill": {
-     "duration": 0.003138,
-     "end_time": "2025-06-12T10:40:45.895209",
+     "duration": 0.003327,
+     "end_time": "2025-06-12T10:56:10.755512",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.892071",
+     "start_time": "2025-06-12T10:56:10.752185",
      "status": "completed"
     },
     "tags": []
@@ -412,19 +412,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d0fc3f5d",
+   "id": "c53bcf9d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.903586Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.902691Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.908979Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.908201Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.763505Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.763208Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.769676Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.768737Z"
     },
     "papermill": {
-     "duration": 0.011801,
-     "end_time": "2025-06-12T10:40:45.910352",
+     "duration": 0.012166,
+     "end_time": "2025-06-12T10:56:10.771093",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.898551",
+     "start_time": "2025-06-12T10:56:10.758927",
      "status": "completed"
     },
     "tags": []
@@ -467,13 +467,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c813d3d",
+   "id": "6394886a",
    "metadata": {
     "papermill": {
-     "duration": 0.003306,
-     "end_time": "2025-06-12T10:40:45.917232",
+     "duration": 0.003401,
+     "end_time": "2025-06-12T10:56:10.778425",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.913926",
+     "start_time": "2025-06-12T10:56:10.775024",
      "status": "completed"
     },
     "tags": []
@@ -485,19 +485,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9eb111b",
+   "id": "467f200f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.925584Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.924813Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.930323Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.929482Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.786668Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.786388Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.791543Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.790558Z"
     },
     "papermill": {
-     "duration": 0.011004,
-     "end_time": "2025-06-12T10:40:45.931694",
+     "duration": 0.011219,
+     "end_time": "2025-06-12T10:56:10.793183",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.920690",
+     "start_time": "2025-06-12T10:56:10.781964",
      "status": "completed"
     },
     "tags": []
@@ -529,13 +529,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4603b7ad",
+   "id": "52439a21",
    "metadata": {
     "papermill": {
-     "duration": 0.003209,
-     "end_time": "2025-06-12T10:40:45.938664",
+     "duration": 0.003482,
+     "end_time": "2025-06-12T10:56:10.800599",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.935455",
+     "start_time": "2025-06-12T10:56:10.797117",
      "status": "completed"
     },
     "tags": []
@@ -547,19 +547,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "56f2bf96",
+   "id": "fb9a3548",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:40:45.946535Z",
-     "iopub.status.busy": "2025-06-12T10:40:45.946213Z",
-     "iopub.status.idle": "2025-06-12T10:40:45.950930Z",
-     "shell.execute_reply": "2025-06-12T10:40:45.950280Z"
+     "iopub.execute_input": "2025-06-12T10:56:10.810129Z",
+     "iopub.status.busy": "2025-06-12T10:56:10.809774Z",
+     "iopub.status.idle": "2025-06-12T10:56:10.817166Z",
+     "shell.execute_reply": "2025-06-12T10:56:10.815865Z"
     },
     "papermill": {
-     "duration": 0.010019,
-     "end_time": "2025-06-12T10:40:45.952061",
+     "duration": 0.01371,
+     "end_time": "2025-06-12T10:56:10.818677",
      "exception": false,
-     "start_time": "2025-06-12T10:40:45.942042",
+     "start_time": "2025-06-12T10:56:10.804967",
      "status": "completed"
     },
     "tags": []
@@ -569,14 +569,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Array  [[1 2 3]\n",
-      " [4 5 6]]\n"
+      "Original Array  [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "\n",
+      " Reshaped Array  [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "\n",
+      " Flattened Array  [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Reveled Array  [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Transposed Array  [[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n"
      ]
     }
    ],
    "source": [
-    "array = np.arange(12)\n",
-    "print(\"Original Array \", arr)"
+    "arr = np.arange(12)\n",
+    "print(\"Original Array \", arr)\n",
+    "\n",
+    "reshaped = arr.reshape((3, 4))\n",
+    "print(\"\\n Reshaped Array \", reshaped)\n",
+    "\n",
+    "flattend = reshaped.flatten()\n",
+    "print(\"\\n Flattened Array \", flattend)\n",
+    "\n",
+    "\n",
+    "# ravel (returns vies, instead of copy)\n",
+    "\n",
+    "\n",
+    "raveled = reshaped.ravel()\n",
+    "print(\"Reveled Array \", raveled)\n",
+    "\n",
+    "\n",
+    "#transpose\n",
+    "transpose = reshaped.T\n",
+    "print(\"Transposed Array \", transpose)"
    ]
   }
  ],
@@ -609,14 +637,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.495433,
-   "end_time": "2025-06-12T10:40:46.375384",
+   "duration": 5.557584,
+   "end_time": "2025-06-12T10:56:11.242786",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-06-12T10:40:40.879951",
+   "start_time": "2025-06-12T10:56:05.685202",
    "version": "2.6.0"
   }
  },
